--- a/templates/archive.tmpl
+++ b/templates/archive.tmpl
@@ -1,10 +1,9 @@
 {{ template "header" . }}
-<article class="pa3 pa5-ns" style="padding-bottom: 0px; padding-top: 0px;">
-  <header class="avenir tc-l ph3 ph4-ns pt4 pt5-ns">
-    <h1 class="f3 f2-m f-subheadline-l measure lh-title fw1 mt0">Topics</h1>
-
+<article style="padding-bottom: 0px; padding-top: 0px;">
+  <header class="avenir ph3 ph5-ns pt4 pt5-ns">
+    <h1 class="f1 pa2 measure lh-title mt0">Previous topics</h1>
   </header>
-  <ul class="list pa3 pa5-ns" style="padding-top: 0px;">
+  <ul class="list ph5-ns" style="padding-top: 0px; max-width: 70rem;">
     <li class="dib mr2"><a href="#" class="f4 f2-ns b db pa2 link dim mid-gray">Losing</a></li>
     <li class="dib mr2"><a href="#" class="f4 f2-ns b db pa2 link dim mid-gray">That Night</a></li>
     <li class="dib mr2"><a href="#" class="f4 f2-ns b db pa2 link dim mid-gray">Accomplishments</a></li>
