--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,14 +1,14 @@
 {{ define "footer" }}
-<footer class="ph3 ph4-ns pv6 bt b--black-10 black-70">
-  <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">stories, incognito</a>
-  <p class="f6 db b ttu lh-solid">© 2017 Stories, Incognito</p>
-  <div class="mt5">
-    <a href="/language/" title="Language" class="f6 dib pr2 mid-gray dim">Language</a>
-    <a href="/terms/"    title="Terms" class="f6 dib ph2 mid-gray dim">Terms of Use</a>
-    <a href="/privacy/"  title="Privacy" class="f6 dib pl2 mid-gray dim">Privacy</a>
-    <a href="/privacy/"  title="Privacy" class="f6 dib pl2 mid-gray dim">Submit your story</a>
+<footer class="pv4 ph5-ns mid-gray">
+  <small class="f6 db">© 2017 <b class="ttu">stories, incognito</b>., All Rights Reserved</small>
+  <div class="mt3">
+    <a href="/language/" title="Language" class="f6 dib ph2 link mid-gray dim">Language</a>
+    <a href="/terms/"    title="Terms" class="f6 dib ph2 link mid-gray dim">Terms of Use</a>
+    <a href="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim">Privacy</a>
+    <a href="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim">Support Us</a>
   </div>
 </footer>
+
 <script>
 feather.replace()
 </script>
