--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -19,7 +19,7 @@
 				<div class="mt4 mt5-m mt6-l ph3" style="max-width: 58rem;">
 					<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">stories, incognito </h1>
 
-					<h2 class="fw1 f3 white-80 mt3 mb4">“<span id="js-rotating">I bought a burn phone.,It made a tear come to my eye.,Where do the peanuts go?,I was 18 and I pledged myself to three things.,Those fleshy emotional people would be appalled.</span>”</h2>
+					<h2 class="fw1 f3 white-80 mt3 mb4"><span id="js-rotating">“I bought a burn phone.”,“It made a tear come to my eye.”,“Where do the peanuts go?”,“I was 18 and I pledged myself to three things.”,“Those fleshy emotional people would be appalled.”</span></h2>
 					<a class="f6 no-underline grow dib v-mid bg-blue white ba b--blue ph4 pv3 mb3" href="/read" style="font-size: 120%;"><strong>Read stories</strong></a>
 					<span class="dib v-mid ph3 white-70 mb3">or</span>
 					<a class="f6 no-underline grow dib v-mid white ba b--white ph4 pv3 mb3" href="/write" style="font-size: 120%;"><strong>Write stories</strong></a>
