--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -20,10 +20,10 @@
 								<i data-feather="layers" class="dib h1 w1"></i>
 								<span class="f6 pr2">Topics</span>
 							</a>
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1" href="/about">
+		<!-- <a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1" href="/about">
 								<i data-feather="help-circle" class="dib h1 w1"></i>
 								<span class="f6 pr2">About</span>
-							</a>
+							</a> -->
 		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l ml2 pv2 ph3 ba" href="/login">Sign In</a>
 	</div>
 </nav>
