--- a/templates/signup.tmpl
+++ b/templates/signup.tmpl
@@ -1,9 +1,9 @@
 {{ template "header" . }}
 
-<section class="ph3 ph5-ns pv5" style="max-width: 66rem;">
+<section class="ph5-ns pv4 ph3" style="max-width: 66rem;">
 		<article class="mw8 center br2">
 			<div class="dt-ns dt--fixed-ns w-100">
-				<main class="pa4 black-80">
+				<main class="black-80">
 					<form action="sign-up_submit" method="get" accept-charset="utf-8">
 	 <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
 		 <h1>Sign Up</h1>
