--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,5 +1,5 @@
 {{ define "footer" }}
-<footer class="pv4 ph5-ns mid-gray">
+<footer class="pv4 ph5-ns mid-gray ph3">
   <small class="f6 db">© 2017 <b class="ttu">stories, incognito</b>., All Rights Reserved</small>
   <div class="mt3">
     <a href="/language/" title="Language" class="f6 dib ph2 link mid-gray dim">Language</a>
