--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -1,8 +1,6 @@
 {{ template "header" . }}
 
-
-
-<section class="ph5-ns pv5" style="max-width: 66rem;">
+<section class="ph5-ns pv4 ph3" style="max-width: 66rem;">
 		<article class="mw8 center br2">
 			<div class="dt-ns dt--fixed-ns w-100">
 				<main class="black-80">
