--- a/templates/read.tmpl
+++ b/templates/read.tmpl
@@ -1,8 +1,16 @@
 {{ template "header" . }}
 <article class="cf ph3 ph5-ns pv5 mw8">
   <header class="fn fl-ns w-50-ns pr4-ns">
-    <h1 class="mb3 mt0 lh-title">Losing</h1>
-    <time class="f6 ttu tracked gray">Story 1 by Zack</time>
+    <h1 class="f1 mb3 mt0 lh-title">“Losing”</h1>
+    <span class="pa1">
+    <time class="f6 ttu tracked gray">November 17th, 2017</time>
+  </span>
+    <div class="pv2">
+      <a class="f4 fw7 dib pa1 no-underline bg-animate bg-white hover-bg-light-blue black-30" href="#0">biking</a>
+      <a class="f4 fw7 dib pa1 no-underline bg-animate bg-white hover-bg-light-blue black-30" href="#0">thieves</a>
+      <a class="f4 fw7 dib pa1 no-underline bg-animate bg-white hover-bg-light-blue black-30" href="#0">police</a>
+
+</div>
   </header>
   <div class="fn fl-ns w-50-ns">
     <p class="lh-copy measure mt4 mt0-ns">
@@ -20,21 +28,24 @@
       student to NCSU who works at a pizzeria and is interested in doing triathlons. For Mathew Phillipe the backstory was that he was a Durhamite who loved soccer and was looking to race his friend on Tobacco Road.
     </p>
   </div>
+  <footer class="fn fl-ns w-50-ns pr4-ns pv4" style="float:right;">
+  <div class="flex">
+    <a href="#0" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box mr4">
+          <svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor">
+            <title>chevronLeft icon</title>
+          <path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
+        </svg>
+        <span class="pl1">Previous</span>
+      </a>
+    <a href="#0" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box">
+        <span class="pr1">Next</span>
+        <svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
+          <title>chevronRight icon</title>
+        <path d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z"></path>
+      </svg>
+    </a>
+  </div>
+</footer>
 </article>
-<div class="flex items-center justify-center pa4">
-  <a href="#0" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box mr4">
-				<svg class="w1" data-icon="chevronLeft" viewBox="0 0 32 32" style="fill:currentcolor">
-					<title>chevronLeft icon</title>
-				<path d="M20 1 L24 5 L14 16 L24 27 L20 31 L6 16 z"></path>
-			</svg>
-			<span class="pl1">Previous</span>
-		</a>
-  <a href="#0" class="f5 no-underline black bg-animate hover-bg-black hover-white inline-flex items-center pa3 ba border-box">
-			<span class="pr1">Next</span>
-			<svg class="w1" data-icon="chevronRight" viewBox="0 0 32 32" style="fill:currentcolor">
-				<title>chevronRight icon</title>
-			<path d="M12 1 L26 16 L12 31 L8 27 L18 16 L8 5 z"></path>
-		</svg>
-	</a>
-</div>
+
 {{ template "footer" . }}
