--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -1,48 +1,73 @@
 {{ template "header" . }}
 
-<section class="ph3 ph5-ns pv5" style="max-width: 66rem;">
-  <div class="pa4-l">
-    <form class="bg-light-red mw7 center pa4 br2-ns ba b--black-10">
-      <fieldset class="cf bn ma0 pa0">
-        <legend class="pa0 f5 f4-ns mb3 black-80">Sign up for our newsletter</legend>
-        <div class="cf">
-          <label class="clip" for="email-address">Email Address</label>
-          <input class="f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-100 w-75-m w-80-l br2-ns br--left-ns" placeholder="Your Email Address" type="text" name="email-address" value="" id="email-address">
-          <input class="f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-20-l br2-ns br--right-ns" type="submit" value="Subscribe">
-        </div>
-      </fieldset>
-    </form>
+<article class="pv5 bg-washed-green dark-green mb2 ph3 " >
+  <h1 class="fw6 f3 ph5-ns f2-ns lh-title mt0 mb3">
+  Write your story
+  </h1>
+  <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
+    Current topic is <span class="f3">“Losing”</span> and closes in 15 days.
+  </h2>
+  <!-- <p class="fw1 f5 mt0 mb3">
+    Sign up for beta access or learn more about x.
+  </p> -->
+  <div class="ph5-ns">
+    <a class="f6 br-pill bg-dark-green no-underline washed-green ba b--dark-green grow pv2 ph3 dib mr3"
+      href="/edit">
+      Write online
+    </a>
+    <a class="f6 br-pill dark-green no-underline ba grow pv2 ph3 dib"
+      href="/submit">
+     Upload from computer
+    </a>
   </div>
-  
-  <article class="mw8 center br2 ba b--light-blue bg-lightest-blue">
-    <div class="dt-ns dt--fixed-ns w-100">
-      <div class="pa3 pa4-ns dtc-ns v-mid">
-        <h2 class="fw4 blue mt0 mb3">Current topic: <strong>Animals</strong></h2>
-        <p class="black-70 measure lh-copy mv0">
-          Write as much or as little as you want. Once you submit your story will be received by an editor.
-        </p>
+</span>
+</article>
+
+<section class="ph3 ph5-ns" style="max-width: 66rem;">
+<h1 class="flex f3 f2-m f1-l">Submitted stories</h1>
+
+
+<ul class="list pl0 mt0 measure">
+
+  <li
+    class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+      <div class="pl3 flex-auto">
+        <span class="f6 db gray-70">Losing</span>
+        <span class="f6 db black-70">August 17th, 2017</span>
       </div>
-      <div class="pa3 pa4-ns dtc-ns v-mid">
-        <a href="#" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2">Edit story</a>
+      <div>
+        <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib black" href="#0">Edit</a>
+        <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="#0">Delete</a>
       </div>
-    </div>
-  </article>
-  <br>
-  <article class="mw8 center br2 ba b--light-blue bg-lightest-blue">
-    <div class="dt-ns dt--fixed-ns w-100">
-      <div class="pa3 pa4-ns dtc-ns v-mid">
-        <h2 class="fw4 blue mt0 mb3">Current topic: <strong>Animals</strong></h2>
-        <p class="black-70 measure lh-copy mv0">
-          Write as much or as little as you want. Once you submit your story will be received by an editor.
-        </p>
-      </div>
-      <div class="pa3 pa4-ns dtc-ns v-mid">
-        <a href="#" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2">Edit story</a>
-      </div>
-    </div>
-  </article>
-  <br>
-</section>
+  </li>
+  <li
+      class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+        <div class="pl3 flex-auto">
+          <span class="f6 db gray-70">Being Broke <em>(submitted)</em></span>
+          <span class="f6 db black-70">August 17th, 2017</span>
+        </div>
+        <div>
+          <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib black" href="#0">Edit</a>
+          <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="#0">Delete</a>
+        </div>
+    </li>
+    <li
+        class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
+          <div class="pl3 flex-auto">
+            <span class="f6 db gray-70">Being Broke <em>(pending)</em></span>
+            <span class="f6 db black-70">August 17th, 2017</span>
+          </div>
+          <div>
+            <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib black" href="#0">Edit</a>
+            <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="#0">Delete</a>
+          </div>
+      </li>
+<div class="pv4 ph2">
+  <a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib blue" href="#0">Download all</a>
+  <a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib gray" href="#0">Delete profile</a>
+
+</div>
+  </section>
 
 
 {{ template "footer" . }}
