--- a/templates/edit.tmpl
+++ b/templates/edit.tmpl
@@ -21,10 +21,28 @@ trix-editor {
   min-height: 320px !important; }
 </style>
 
-<section class="ph3 ph5-ns pv4" style="max-width: 66rem;">
-    <div class="dt-ns dt--fixed-ns w-100">
-    </div>
-  <article class="mw8 center br2 ba b--light-blue bg-lightest-blue">
+<article class="pv5 bg-lightest-blue  dark-blue mb2 ph3 " >
+  <h1 class="fw6 f3 ph5-ns f2-ns lh-title mt0 mb3">
+  Write your story
+  </h1>
+  <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
+    Current topic is <span class="f3">“Losing”</span> and closes in 15 days.
+  </h2>
+  <!-- <p class="fw1 f5 mt0 mb3">
+    Sign up for beta access or learn more about x.
+  </p> -->
+  <div class="ph5-ns">
+    <a class="f6 br-pill bg-dark-blue no-underline washed-green ba b--dark-blue grow pv2 ph3 dib mr3"
+      href="/edit">
+      Submit story
+    </a>
+  </div>
+</span>
+</article>
+
+
+<section class="ph3 ph5-ns pv3" style="max-width: 66rem;">
+  <!-- <article class="mw8 center br2 ba b--light-blue bg-lightest-blue">
     <div class="dt-ns dt--fixed-ns w-100">
       <div class="pa3 pa4-ns dtc-ns v-mid">
           <h2 class="fw4 blue mt0 mb3">Current topic: <strong>Animals</strong></h2>
@@ -36,7 +54,7 @@ trix-editor {
         <a href="#" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2">Submit story</a>
       </div>
     </div>
-  </article>
+  </article> -->
   <br>
   <article class="mw8 center br2 ba">
     <div class="dt-ns dt--fixed-ns w-100">
