--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -1,6 +1,6 @@
 {{ template "header" . }}
 
-<article class="pv5 bg-washed-green dark-green mb2 ph3 " >
+<article class="pv5 bg-lightest-blue  dark-blue mb2 ph3 " >
   <h1 class="fw6 f3 ph5-ns f2-ns lh-title mt0 mb3">
   Write your story
   </h1>
@@ -11,11 +11,11 @@
     Sign up for beta access or learn more about x.
   </p> -->
   <div class="ph5-ns">
-    <a class="f6 br-pill bg-dark-green no-underline washed-green ba b--dark-green grow pv2 ph3 dib mr3"
+    <a class="f6 br-pill bg-dark-blue no-underline washed-green ba b--dark-blue grow pv2 ph3 dib mr3"
       href="/edit">
       Write online
     </a>
-    <a class="f6 br-pill dark-green no-underline ba grow pv2 ph3 dib"
+    <a class="f6 br-pill dark-blue no-underline ba grow pv2 ph3 dib"
       href="/submit">
      Upload from computer
     </a>
