--- a/templates/edit.tmpl
+++ b/templates/edit.tmpl
@@ -68,6 +68,11 @@ trix-editor {
     <div class="dt-ns dt--fixed-ns w-100">
     </div>
   </article>
+  <div class="measure pv3">
+    <label for="name" class="f6 b db mb2">Keywords <span class="normal black-60">(optional)</span></label>
+    <input id="name" class="input-reset ba b--black-20 pa2 mb2 db w-100" type="text" aria-describedby="name-desc">
+    <small id="name-desc" class="f6 black-60 db mb2">Helper text for the form control.</small>
+  </div>
 </section>
 
 
