--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -21,8 +21,8 @@
 					<form action="sign-up_submit" method="get" accept-charset="utf-8">
 	 <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
 		 <div class="mt3">
-			 <label class="db fw4 lh-copy f6" for="email-address">Email address</label>
-			 <input class="pa2 input-reset ba bg-transparent w-100 measure" type="email" name="email-address"  id="email-address">
+			 <label class="db fw4 lh-copy f6" for="username">Username:</label>
+			 <input class="pa2 input-reset ba bg-transparent w-100 measure" name="username"  id="username">
 		 </div>
 		 <div class="mt3">
 			 <label class="db fw4 lh-copy f6" for="password">Password</label>
