--- a/templates/landing.tmpl
+++ b/templates/landing.tmpl
@@ -8,17 +8,19 @@
       </header>
       <section class="pt2 pb4">
 
-   <p class="f5 lh-copy measure-wide">
+        <p class="f5 lh-copy measure-wide">
 
-     <strong>stories, incognito</strong> is a place for you to share your story and to read the stories shared by others, for free. Each month we select a topic and invite anyone to write a story on that topic. The stories are submitted anonymously to our editors who will copyedit and then publish your story along with the others on that topic at the end of each month.
-   </p>
+          <strong>stories, incognito</strong> is a place for you to share your story and to read the stories shared by others, for free. Each month we select a topic and invite anyone to write a story on that topic. The stories are submitted anonymously
+          to our editors who will copyedit and then publish your story along with the others on that topic at the end of each month.
+        </p>
 
-   <p class="f4 lh-copy measure">
-     All the stories here are from real anonymous people, for you to read and enjoy for free. We only ask that you consider leaving a story after reading a story.
-   </p>
-   <p class="f5 lh-copy measure-wide">
- We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful Anonymous, except that here we consider <em>all stories</em> from everywhere in the world.
-   </p>
+        <p class="f4 lh-copy measure">
+          All the stories here are from real anonymous people, for you to read and enjoy for free. We only ask that you consider leaving a story after reading a story.
+        </p>
+        <p class="f5 lh-copy measure-wide">
+          We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives. Think of this as Reader's Write, or the Metropolitan Diary, or Beautiful
+          Anonymous, except that here we consider <em>all stories</em> from everywhere in the world.
+        </p>
 
 
       </section>
@@ -26,7 +28,7 @@
   </div>
 </article>
 
-		<!-- <article class="pa3 pa5-ns sans-serif" data-name="slab-stat">
+<!-- <article class="pa3 pa5-ns sans-serif" data-name="slab-stat">
 			<dl class="dib mr5">
 				<dd class="f6 f5-ns b ml0">Current Open Topic</dd>
 				<dd class="f3 f2-ns b ml0">Animals</dd>
