--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -1,5 +1,19 @@
 {{ template "header" . }}
 
+<div class="pa3 pv4 bg-light-yellow red">
+  <section class=" pv2 ph5-ns">
+      <i data-feather="alert-circle" class="dib h2 w2 v-mid"></i>
+  <span class="lh-title ml3  v-mid">Could not find user.</span>
+</section>
+</div>
+
+<div class="pa3 pv4 bg-lightest-blue navy">
+  <section class=" pv2 ph5-ns">
+    <i data-feather="info" class="dib h2 w2 v-mid"></i>
+  <span class="lh-title ml3 v-mid">Please sign in first. / You are signed out.</span>
+</section>
+</div>
+
 <section class="pa2 pv2 ph5-ns">
 <article class="ph2">
  <h1 class="db f1-l f2 mb1">Sign In</h1>
