--- a/templates/edit.tmpl
+++ b/templates/edit.tmpl
@@ -33,7 +33,7 @@ trix-editor {
     Sign up for beta access or learn more about x.
   </p> -->
   <div class="ph5-ns">
-    <input class="f4 leader br-pill bg-dark-blue no-underline washed-green pointer ba b--dark-blue grow pv2 ph3 dib mr3"
+    <input class="f4 f3-m f3-l  leader br-pill bg-dark-blue no-underline washed-green pointer ba b--dark-blue grow pv2 ph3 dib mr3"
       type="Submit" value="Submit Story">
     </input>
     </a>
@@ -45,7 +45,7 @@ trix-editor {
 <section class="ph3 ph5-ns pv3 mb5" style="max-width: 66rem;">
   <h1 class="db f4 mb1">Submitting stories</h1>
   <span class="f6 db lh-copy measure-wide">
-    Write your story as long as short as you want. Once submitted, the story will reach and editor who will proofread, copyedit, and remove any personally identifying information - including changing the names of any people or places. See <a href="/privacy" target="_blank">Privacy</a> for more information.
+    Write your story as long as short as you want. Once submitted, the story will reach and editor who will proofread and remove any personally identifying information. See <a href="/privacy" target="_blank">Privacy</a> for more information. You can also <a href="/upload">upload a file</a> instead.
   </span>
   <!-- <article class="mw8 center br2 ba b--light-blue bg-lightest-blue">
     <div class="dt-ns dt--fixed-ns w-100">
