--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -14,11 +14,11 @@ Me's Profile
     Sign up for beta access or learn more about x.
   </p> -->
   <div class="ph5-ns">
-    <a class="f4 leader br-pill bg-dark-blue no-underline washed-green ba b--dark-blue grow pv2 ph3 dib mr3"
+    <a class="f4 f3-m f3-l  leader br-pill bg-dark-blue no-underline washed-green ba b--dark-blue grow pv2 ph3 dib mr3"
       href="/write">
       Write online
     </a>
-    <a class="f4  leader br-pill dark-blue no-underline ba grow pv2 ph3 dib"
+    <a class="f4 f3-m f3-l   leader br-pill dark-blue no-underline ba grow pv2 ph3 dib"
       href="/upload">
      Upload from computer
     </a>
