--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -16,19 +16,25 @@
 <i data-feather="edit-2" class="dib h1 w1 v-mid"></i>
 <span class="f6 pr2 v-mid">Write</span>
 </a>
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1 v-mid" href="/archive">
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1 v-mid" href="/topics">
 <i data-feather="layers" class="dib h1 w1 v-mid"></i>
 <span class="f6 pr2  v-mid">Topics</span>
 </a>
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib pv2 ph1 v-mid" href="/stories">
+<a class="f6 fw4 hover-white no-underline white-70 dn dib pv2 ph1 v-mid" href="/profile">
 <i data-feather="user" class="dib h1 w1 v-mid"></i>
 <span class="f6 pr2  v-mid">Me</span>
 </a>
+
+<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1 v-mid" href="/admin">
+<i data-feather="stop-circle" class="dib h1 w1 v-mid"></i>
+<span class="f6 pr2  v-mid">Admin</span>
+</a>
+
 		<!-- <a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1" href="/about">
 								<i data-feather="help-circle" class="dib h1 w1"></i>
 								<span class="f6 pr2">About</span>
 							</a> -->
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l ml2 pv2 ph3 ba v-mid" href="/login">Sign In</a>
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/login">Sign In</a>
 	</div>
 </nav>
 {{ end }}
