--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -1,86 +1,97 @@
 {{ template "header" . }}
+<link rel="stylesheet" type="text/css" href="/static/css/trix.css">
+<script type="text/javascript" src="https://trix-editor.org/js/trix.js"></script>
+<script src="https://trix-editor.org/js/attachments.js"></script>
 
-<article class="pv4 bg-lightest-blue  dark-blue mb2 ph3 " >
-  <h1 class="fw6 f3 ph5-ns f2-ns lh-title mt0 mb0">
-Me's Profile
+<style>
+  @import url("/static/css/trix.css");
+
+  .trix-container {
+    max-width: 100%;
+  }
+
+  .trix-content h1 {
+    margin-bottom: 0.4em;
+  }
+
+  .trix-content .attachment--preview {
+    margin: 0.6em 0;
+  }
+
+  trix-toolbar {
+    font-family: sans-serif;
+  }
+
+  trix-editor {
+    min-height: 320px !important;
+  }
+</style>
+
+<form action="/story" method="POST" enctype="multipart/form-data" id="formdata" >
+  <article class="pv4 bg-lightest-blue dark-blue ph3 ">
+    <h1 class="fw6 f3 ph5-ns f2-ns lh-title mt0 mb0">
+  Write your story
   </h1>
-  <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
-   Manage your stories. Make new ones, edit old ones, delete unwanted ones. <span class="f3">&nbsp;</span>
+    <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
+    Current topic is <span class="f3">“Losing.”</span>
   </h2>
-  <!-- <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
-    Current topic is <span class="f3">“Losing”</span> and closes in 15 days.
-  </h2> -->
-  <!-- <p class="fw1 f5 mt0 mb3">
+    <!-- <p class="fw1 f5 mt0 mb3">
     Sign up for beta access or learn more about x.
   </p> -->
-  <div class="ph5-ns">
-    <a class="f4 f3-m f3-l  leader br-pill bg-dark-blue no-underline washed-green ba b--dark-blue grow pv2 ph3 dib mr3"
-      href="/write">
-      Write online
-    </a>
-    <a class="f4 f3-m f3-l   leader br-pill dark-blue no-underline ba grow pv2 ph3 dib"
-      href="/upload">
-     Upload from computer
-    </a>
-  </div>
-</span>
-</article>
-
-<section class="pa2 pv2 ph5-ns mb5">
-<article class="ph2">
- <h1 class="db f4 mb1">Your stories</h1>
- <span class="f5 db lh-copy measure-wide">
-   The stories you have authored are listed below.  If you need to update your story, just click Edit. Once published, you will no longer be able to Edit. If you wish to no longer have your story available, feel free to delete.
- </span>
- <span class="f5 db lh-copy measure pt3">
-   Only you can see the stories you have published. When your stories are published, only the content of the story will be publicly visible. Any personally identifying information will be removed before your story is published.
- </span>
- </article>
- <article class="ph2 pv4">
- <ul class="list pl0 mt0 measure">
-
-   <li
-     class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-       <div class="flex-auto">
-         <span class="f6 db gray-70">Losing</span>
-         <span class="f6 db black-70">August 17th, 2017</span>
-       </div>
-       <div>
-         <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib black" href="/write?id=ALKSJDAL">Edit</a>
-         <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="/delete?id=ALKJSAF">Delete</a>
-       </div>
-   </li>
-   <li
-       class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-         <div class="flex-auto">
-           <span class="f6 db gray-70">Being Broke</span>
-           <span class="f6 db black-70">August 17th, 2017</span>
-         </div>
-         <div>
-           <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="#0">Delete</a>
-         </div>
-     </li>
-     <li
-         class="flex items-center lh-copy pa3 ph0-l bb b--black-10">
-           <div class="flex-auto">
-             <span class="f6 db gray-70">Being Broke <em>(submitted)</em></span>
-             <span class="f6 db black-70">August 17th, 2017</span>
-           </div>
-           <div>
-             <a class="f6 link dim br1 ba bw1 ph3 pv2 mb2 dib red" href="#0">Delete</a>
-           </div>
-       </li>
- <div class="pv4 ph2">
-   <a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib blue" href="#0">Download all</a>
-   <a class="f6 link dim br1 ba bw1 ph5 pv2 mb2 dib gray" href="#0">Delete profile</a>
-</article>
-
- <!-- <article class="ph2 pv4">
-    <span class="f5 db lh-copy measure">
-    This is the current list of topics, some of which are passed. Click on a topic to read the stories from it.
+    <div class="ph5-ns">
+      <input class="f4 f3-m f3-l  leader br-pill bg-dark-blue no-underline washed-green pointer ba b--dark-blue grow pv2 ph3 dib mr3" type="Submit" value="Submit Story">
+      </input>
+      </a>
+    </div>
     </span>
- </article> -->
+  </article>
+
+{{ template "messages" .}}
+
+  <section class="ph3 ph5-ns pv3 mb5" style="max-width: 66rem;">
+    <h1 class="db f4 mb1">Submitting stories</h1>
+    <span class="f6 db lh-copy measure-wide">
+    Write your story as long as short as you want. Once submitted, the story will reach and editor who will proofread and remove any personally identifying information. See <a href="/privacy" target="_blank">Privacy</a> for more information.
+    <!-- You can also <a href="/upload">upload a file</a> instead. -->
+  </span>
+    <!-- <article class="mw8 center br2 ba b--light-blue bg-lightest-blue">
+    <div class="dt-ns dt--fixed-ns w-100">
+      <div class="pa3 pa4-ns dtc-ns v-mid">
+          <h2 class="fw4 blue mt0 mb3">Current topic: <strong>Animals</strong></h2>
+          <p class="black-70 measure lh-copy mv0">
+            Write as much or as little as you want. Once you submit your story will be received by an editor.
+          </p>
+      </div>
+      <div class="pa3 pa4-ns dtc-ns v-mid">
+        <a href="#" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2">Submit story</a>
+      </div>
+    </div>
+  </article> -->
+
+    <article class="mw8 center br2 ba mt3">
+      <div class="dt-ns dt--fixed-ns w-100">
+        <div class="trix-container">
+          <input type="hidden" id="content" name="content" value="<div>This is &quot;some&quot; text 'hi'</div>">
+          <trix-editor input="content" class="trix-content" autofocus></trix-editor>
+        </div>
+      </div>
+      <div class="dt-ns dt--fixed-ns w-100">
+      </div>
+    </article>
+
+    <div class="measure pv2 mt2">
+
+      <label for="keywords" class="f3 b db mb2 leader">Keywords
+            <span class="normal black-60">(optional)</span>
+          </label>
+      <input id="keywords" name="keywords" class="input-reset ba b--black-20 pa2 mb db w-100" type="text" aria-describedby="name-desc">
+    </div>
+    <input type="hidden" id="apikey" name="apikey" value="{{ .APIKey }}">
+    <input type="hidden" id="storyid" name="storyid" value="{{ .StoryID }}">
+</form>
+
 </section>
+
 
 
 
