--- a/templates/signup.tmpl
+++ b/templates/signup.tmpl
@@ -23,8 +23,8 @@
 					<form action="/signup" method="POST" enctype="multipart/form-data" id="formdata" >
 	 <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
 		 <div class="mt3">
-			 <label class="db fw4 lh-copy f6" for="username">Username:</label>
-			 <input class="pa2 input-reset ba bg-transparent w-100 measure" name="username"  id="username">
+			 <label class="db fw4 lh-copy f6" for="email">Email:</label>
+			 <input class="pa2 input-reset ba bg-transparent w-100 measure" name="email"  id="email" type="email">
 		 </div>
 		 <div class="mt3">
 			 <label class="db fw4 lh-copy f6" for="password">Password</label>
