--- a/templates/profile.tmpl
+++ b/templates/profile.tmpl
@@ -2,10 +2,10 @@
 
 <article class="pv4 bg-lightest-blue  dark-blue mb2 ph3 " >
   <h1 class="fw6 f3 ph5-ns f2-ns lh-title mt0 mb0">
-Me's Profile
+Your Profile
   </h1>
   <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
-   Manage your stories. Make new ones, edit old ones, delete unwanted ones. <span class="f3">&nbsp;</span>
+   Manage your stories.<span class="f3">&nbsp;</span>
   </h2>
   <!-- <h2 class="fw2 f4 ph5-ns lh-copy mt0 mb3">
     Current topic is <span class="f3">“Losing”</span> and closes in 15 days.
