--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -34,7 +34,11 @@
 								<i data-feather="help-circle" class="dib h1 w1"></i>
 								<span class="f6 pr2">About</span>
 							</a> -->
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/login">Sign In</a>
+		{{ if .SignedIn }}
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/signout">Sign Out</a>
+		{{ else }}
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m ml2 pv2 ph3 ba v-mid" href="/signin">Sign In</a>
+		{{ end }}
 	</div>
 </nav>
 {{ end }}
