--- a/templates/signup.tmpl
+++ b/templates/signup.tmpl
@@ -6,14 +6,9 @@
  <h1 class="db f1-l f2 mb1">Sign Up</h1>
     <span class="f5 db lh-copy measure">
       Enter your email and a password to become a member of <strong>Stories, Incognito</strong>.
-			Even though you provide an email address, we will never send you an email unless you request the digest. We provide stories, not spam.
+			Even though you provide an email address, we will never send you an email unless you request the monthly digest or require a password reset. We provide stories, not spam.
     </span>
  </article>
- <!-- <article class="ph2 pv4">
-    <span class="f5 db lh-copy measure">
-    This is the current list of topics, some of which are passed. Click on a topic to read the stories from it.
-    </span>
- </article> -->
 </section>
 
 <section class="pa2 pv2 ph5-ns mb5">
