--- a/templates/write.tmpl
+++ b/templates/write.tmpl
@@ -27,7 +27,7 @@
   }
 </style>
 
-<form action="/story" method="POST" enctype="multipart/form-data" id="formdata" >
+<form action="/write?story={{ .StoryID }}" method="POST" enctype="multipart/form-data" id="formdata" >
   <article class="pv4 bg-lightest-blue dark-blue ph3 ">
     <h1 class="fw6 f3 ph5-ns f2-ns lh-title mt0 mb0">
   Write your story
@@ -51,14 +51,14 @@
   <section class="ph3 ph5-ns pv3 mb5" style="max-width: 66rem;">
     <h1 class="db f4 mb1">Submitting stories</h1>
     <span class="f6 db lh-copy measure-wide">
-    Write your story as long as short as you want. Once submitted, the story will reach and editor who will proofread and remove any personally identifying information. See <a href="/privacy" target="_blank">Privacy</a> for more information.{{ .StoryHTML }}
+    Write your story as long as short as you want. Once submitted, the story will reach and editor who will proofread and remove any personally identifying information. See <a href="/privacy" target="_blank">Privacy</a> for more information.
     <!-- You can also <a href="/upload">upload a file</a> instead. -->
   </span>
 
     <article class="mw8 center br2 ba mt3">
       <div class="dt-ns dt--fixed-ns w-100">
         <div class="trix-container">
-          <input type="hidden" id="content" name="content" value="{{ .StoryHTML }}">
+          <input type="hidden" id="content" name="content" value="">
           <trix-editor input="content" class="trix-content" autofocus></trix-editor>
         </div>
       </div>
@@ -79,8 +79,12 @@
 
 </section>
 
-
-
-
+<script>
+window.onload = function () { 
+  var element = document.querySelector("trix-editor");
+  element.editor.setSelectedRange([0, 0]);
+  element.editor.insertHTML(unescape("{{ .StoryHTML }}"));
+}
+</script>
 
 {{ template "footer" . }}
