Updated UI add topics

--- a/templates/message.tmpl
+++ b/templates/message.tmpl
@@ -1,6 +1,6 @@
 {{ define "messages" }}
 {{ with .InfoMessage }}
-<div class="pa3 pv2 bg-lightest-blue navy">
+<div class="pa3 pv2 bg-dark-blue washed-red">
   <section class=" pv2 ph5-ns">
     <i data-feather="info" class="dib h2 w2 v-mid"></i>
   <span class="lh-title ml3 v-mid">{{ . }}</span>
